# object_detection_profile

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  run.sh
