[tool.poetry]
name = "ObjectDetectionProfiling"
version = "0.1.0"
description = ""
authors = ["Pawel Budzynski <pawel.budzynski19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
torchvision = "^0.19.0"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
